# djh_ins

./: CMakeLists.txt  README.md  djh_insConfig.cmake.in  package.xml
doc/: documentation.aux  documentation.bbl  documentation.blg  documentation.out  documentation.tex  references.bib
doc/pictures/: UMLofdjh_ins.vsdx
include/: aggregator.h  imu_corrector.h  quaternion_math.h
include/djh_ins/: djh_ins.h  gravity_model.h  imu_correct.h  ins_ode.h  integrator.h  preintegration.h  quaternion_math.h
launch/: test_set.launch
msg/: compute_ins.msg
param/: Earthparam.yaml  IMUmodel.yaml
src/: aggregator.cpp  bare_bones_node.cpp  djh_ins.cpp  djh_ins_node.cpp  gravity_model.cpp  imu_correct.cpp  imu_corrector.cpp  ins_ode.cpp  integrator.cpp  preintegration.cpp  quaternion_math.cpp
test_module/test/: CMakeLists.txt  djh_ins_node.cpp  package.xml
test_module/test/launch/: test_set.launch
