<?xml version="1.0"?>
<package>
  <name>djh_ins_test</name>
  <version>0.1.0</version>
  <description>
	The Bretl Research Group Inertial Navigation System package
  </description>

  <maintainer email="hanley6@illinois.edu">David Hanley</maintainer>
  <license>GPLv3</license>
  <!-- <url type="website">http://wiki.ros.org/vio</url> -->
  <author>David Hanley, David Degenhardt, Alex Faustino</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>

</package>
